@@ -5,12 +5,18 @@
 -->
 
 <div align="center">
-    <h1>Reach 2048</h1>
-</div>
+    <h1>
+    Reach 2048 |
+    <img src="src/main/resources/assets/logo.png" alt="Reach 2048" width="520" align="center">
+    </h1>
+</div> 
 
 <!-------------------Put tag here------------------->
-<div>
-    <!-------------------Several tags here...------------------->
+<div align="center">
+    <p>
+    <img src="https://img.shields.io/badge/JavaFX-21.0.2-orange?style=flat&link=https%3A%2F%2Fopenjfx.io%2F" />&emsp;
+    <img src="https://img.shields.io/badge/Maven-3.8.5-blue?style=flat&logo=apache%20maven&color=%23C71A36&link=https%3A%2F%2Fmaven.apache.org%2F"/>
+    </p>
 </div>
 
 <!-------------------Put introduction here------------------->
@@ -28,6 +34,21 @@
 <!-------------------Put how to run on local here------------------->
 <div>
     <h2>🛠️ How to build on local</h2>
+    <p>
+    1. <a href="https://download2.gluonhq.com/openjfx/21.0.2/openjfx-21.0.2_windows-x64_bin-sdk.zip">Download JavaFX SDK 21.0.2</a> and put it at your java-lib path.
+    </p>
+    <p>
+    2.Add Virtual Machine Options: <code>--module-path
+    "C:\Program Files\Java\lib\javafx-sdk-21.0.2\lib"
+    --add-modules
+    javafx.controls,javafx.fxml
+    --add-modules
+    javafx.controls,javafx.media
+    --add-exports
+    javafx.graphics/com.sun.glass.utils=ALL-UNNAMED
+    --add-exports
+    javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED</code> to run <code>Main.java</code>
+    </p>
 </div>
 
 <!-------------------Put develop notes here------------------->
@@ -41,10 +62,37 @@
     <h2>📥 Download It</h2>
 </div>
 
+<br/>
+
+<div>
+  <h2>🌟 About this repo</h2>
+</div>
+
 <!--
     -----------------Put MoeCounter here-----------------
 -->
-
+<div align="center">
+  <img src="https://count.himiku.com/get/@misuzu&theme=rule34" alt="MoeCounter" />
+</div>
+<br></br>
 <!--
     -----------------Put star graph here-----------------
 -->
+<picture>
+  <source
+    media="(prefers-color-scheme: dark)"
+    srcset="
+      https://api.star-history.com/svg?repos=zaddle55/Gaming2048&type=Date&theme=dark
+    "
+  />
+  <source
+    media="(prefers-color-scheme: light)"
+    srcset="
+      https://api.star-history.com/svg?repos=zaddle55/Gaming2048&type=Date&theme=light
+    "
+  />
+  <img
+    alt="Star History Chart"
+    src="https://api.star-history.com/svg?repos=zaddle55/Gaming2048&type=Date"
+  />
+</picture>
